Sat Jul 16 02:18:12 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_valuebox/valuebox_ci.cpp:
        
          Changed code generation of the _boxed_out() method for
          boxed array types to return the type of the valuebox
          member's .out() method. The _boxed_out() method previously
          returned the member's .inout() method, which could
          potentially cause a memory leak if the member _var's
          contained pointer is non-zero when _boxed_out() is
          called.

Fri Jul 15 17:01:34 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/orbsvcs/DsLogAdmin.mpc:

	  Added Hash_Persistence_Strategy.*, Hash_LogStore.*, and 
	  Hash_LogRecordStore.* to DsLogAdmin_Serv project.

	* orbsvcs/orbsvcs/Log/LogMgr_i.cpp:
	* orbsvcs/orbsvcs/Log/LogMgr_i.h:

	  Use dynamically loaded persistence strategy to create 
	  LogStore.

	* orbsvcs/orbsvcs/Log/Log_Persistence_Strategy.h:
	* orbsvcs/orbsvcs/Log/Hash_Persistence_Strategy.cpp:
	* orbsvcs/orbsvcs/Log/Hash_Persistence_Strategy.h:

	  New TAO_Log_Persistence_Strategy abstract base class which 
	  strategizes the log parameter and log record storage, with 
	  concrete TAO_Hash_Persistence_Strategy.h implementation.

	* orbsvcs/orbsvcs/Log/LogMgr_i.cpp:
	* orbsvcs/orbsvcs/Log/LogMgr_i.h:
	* orbsvcs/orbsvcs/Log/LogStore.h:
	* orbsvcs/orbsvcs/Log/Hash_LogStore.cpp:
	* orbsvcs/orbsvcs/Log/Hash_LogStore.h:

	  Refactor LogMgr_i class so it bridges to new LogStore abstract
	  base class, with concrete TAO_Hash_LogStore implementation.

        * orbsvcs/orbsvcs/Log/LogRecordStore.h:
        * orbsvcs/orbsvcs/Log/LogRecordStore.cpp:
	* orbsvcs/orbsvcs/Log/Hash_LogRecordStore.cpp:
	* orbsvcs/orbsvcs/Log/Hash_LogRecordStore.h:

	  Refactor TAO_LogRecordStore class into an abstract base class 
	  with a concrete TAO_Hash_LogRecordStore implementartion.

	* orbsvcs/orbsvcs/Log/Log_i.cpp (write_recordlist):

	  Throw DsLogAdmin::LogOffDuty if log is off duty.
