@@ -1,3 +1,10 @@
+Sat Jul 16 10:24:36 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>
+
+	* orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.{cpp,h}: Added 
+	  a lock to prevent race conditions.  Thanks to Frank Hunleth
+ 	  <frank@hunleth.com> and Felix Perez Alamillo
+ 	  <fpalamillo@indra.es> for helping with this.	
+  
 Sat Jul 16 02:18:12 UTC 2005  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_valuebox/valuebox_ci.cpp:
